RenderStyle::resetPadding sets incorrect computed value (auto) https://bugs.webkit.org/show_bug.cgi?id=218211

Reviewed by Antti Koivisto.

* rendering/style/RenderStyle.h:
(WebCore::RenderStyle::resetPadding):


Canonical link: https://commits.webkit.org/230928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269037 268f45cc-cd09-0410-ab3c-d52691b4dbfc